<resources>
    <string name="app_name">iTrain</string>

    <string name="NaS">NaS</string>

    <!-- activity_main -->
    <string name="am_title">@string/app_name</string>
    <string name="am_contexDescBtnAddExercise">add new training</string>

    <!-- activity_training -->
    <string name="at_title">@string/app_name</string>
    <string name="at_contexDescBtnAddExercise">add new exercise</string>
    <string name="at_contexDescBtnDeleteSort">delete exercise</string>

    <!-- activity_exercise -->
    <string name="ae_textTimeLable">Time</string>
    <string name="ae_textSettingLable">Setting</string>
    <string name="ae_hintDataExercise">write here your results</string>
    <string name="ae_contexDescBtnSettingsE">change settings</string>
    <string name="ae_contexDescBtnDellE">delete exercise</string>
    <string name="ae_contexDescBtnTimerE">start timer</string>

    <!-- alter_dialog_add_training -->
    <string name="adat_textTitleTraining">Name</string>
    <string name="adat_hintTitleTraining">training name</string>

    <!-- alter_dialog_add_exercise -->
    <string name="adae_textTitleExercise">Name</string>
    <string name="adae_hintTitleExercise">exercise name</string>
    <string name="adae_textTime">Time</string>
    <string name="adae_textHintTime">60</string>
    <string name="adae_hintTime">time in seconds</string>
    <string name="adae_textSetting">Setting</string>
    <string name="adae_hintSetting">machine settings</string>

    <!-- alter_dialog_modify_exercise -->
    <string name="adme_textTime">Time</string>
    <string name="adme_textHintTime">60</string>
    <string name="adme_hintTime">time in seconds</string>
    <string name="adme_textSetting">Setting</string>
    <string name="adme_hintSetting">machine settings</string>

    <!-- exercise enumerator -->
    <string name="leg_type">leg</string>
    <string name="arm_type">arm</string>
    <string name="back_type">back</string>
</resources>