<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rlBtnInfoExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/backgroundTrainingRow"
        android:paddingVertical="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtTitleExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/adae_textTitleExercise"
                android:textColor="@color/TitleTrainingRowColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTitleExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/txtTitleExercise"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/adae_hintTitleExercise"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:textColorHint="#795548"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextTitleExercise"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/adae_textTime"
                android:textColor="@color/TitleTrainingRowColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextTitleExercise"
                android:layout_alignStart="@id/txtTime"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/adae_hintTime"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/adae_textHintTime"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextTime"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/adae_textSetting"
                android:textColor="@color/TitleTrainingRowColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextTime"
                android:layout_alignStart="@id/txtSetting"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/adae_hintSetting"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <!-- Button -->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>