<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/gradient_title_background">

        <ImageView
            android:id="@+id/AT_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/itrain_logo"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/AT_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/AT_logo"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/NaS"
            android:textColor="@color/TitleTrainingColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/AT_btnAddExercise"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="addNewExerciseClick"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/at_contexDescBtnAddExercise"/>

        <ImageButton
            android:id="@+id/AT_btnDeleteSort"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/AT_btnAddExercise"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/at_contexDescBtnDeleteSort"
            android:onClick="sortNamesPerpetual"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_delete_forever_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AT_recyclerViewExercise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:descendantFocusability="afterDescendants"
            android:divider="#ffffffff"

            android:focusable="false"
            tools:listitem="@layout/training_listactivity_row" />

        <ProgressBar
            android:id="@+id/AT_progressBarExercise"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/loadingBarColor"
            android:visibility="visible" />

    </RelativeLayout>
</LinearLayout>